; ModuleID = '/home/carl/AnghaBench/tmux/extr_window-client.c_window_client_resize.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window-client.c_window_client_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_mode_entry = type { %struct.window_client_modedata* }
%struct.window_client_modedata = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.window_mode_entry*, i32, i32)* @window_client_resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_client_resize(%struct.window_mode_entry* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.window_mode_entry*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.window_client_modedata*, align 8
  store %struct.window_mode_entry* %0, %struct.window_mode_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.window_mode_entry*, %struct.window_mode_entry** %4, align 8
  %9 = getelementptr inbounds %struct.window_mode_entry, %struct.window_mode_entry* %8, i32 0, i32 0
  %10 = load %struct.window_client_modedata*, %struct.window_client_modedata** %9, align 8
  store %struct.window_client_modedata* %10, %struct.window_client_modedata** %7, align 8
  %11 = load %struct.window_client_modedata*, %struct.window_client_modedata** %7, align 8
  %12 = getelementptr inbounds %struct.window_client_modedata, %struct.window_client_modedata* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @mode_tree_resize(i32 %13, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @mode_tree_resize(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
